added background photo

--- a/app.css
+++ b/app.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('./resources/images/headerBackground.jpg');
+  background-image: url('https://imgur.com/sGvJC5C');
   background-size: cover;
 }
 
