--- a/app.css
+++ b/app.css
@@ -1,8 +1,32 @@
-body {
-  background-image: url('https://imgur.com/sGvJC5C');
+body{
+  background-image: url('https://i.imgur.com/sGvJC5C.jpg?1');
   background-size: cover;
 }
-
+#name-plate{
+  margin: -8px;
+  padding: 1px;
+  background-color: hsla(0, 0%, 93%, 0.795);
+  padding-left: 41px;
+  font-family: 'Caladea', serif;
+}
+nav{
+  height: 55px;
+  background-color:hsl(201, 13%, 90%);
+  margin: -10px;
+  margin-top: 8px;
+  padding-left: 10px;
+}
+.nav-button{
+  height: 54px;
+  width: 215px;
+  background-color: hsl(201, 13%, 90%);
+  border-radius: 5px;
+  font-size: large;
+  border-style: none;
+}
+.nav-button:hover{
+  background-color: hsl(240, 0%, 58%);
+}
 h3{
   display: flex;
   justify-content: center;
