--- a/app.css
+++ b/app.css
@@ -1,18 +1,27 @@
-body{
-  background-image: url('https://i.imgur.com/sGvJC5C.jpg?1');
+body, html{
+  margin:0;
+  padding:0;
+}
+
+main{
+  background-image: linear-gradient(to bottom right, hsl(236, 7%, 47%), hsl(201, 13%, 90%));
   background-size: cover;
+  width: 100%;
+  height: 40rem;
+
+
 }
 #name-plate{
-  margin: -8px;
+  margin-bottom: -8px;
   padding: 1px;
   background-color: hsla(0, 0%, 93%, 0.795);
   padding-left: 41px;
   font-family: 'Caladea', serif;
+  color: rgb(70, 70, 70);
 }
 nav{
   height: 55px;
   background-color:hsl(201, 13%, 90%);
-  margin: -10px;
   margin-top: 8px;
   padding-left: 10px;
 }
@@ -20,6 +29,7 @@ nav{
   height: 54px;
   width: 215px;
   background-color: hsl(201, 13%, 90%);
+  color: rgb(70, 70, 70);
   font-size: 1.8rem ;
   border-style: none;
   font-family: 'Caladea', serif;
@@ -32,9 +42,9 @@ nav{
   background-color: hsl(210, 6%, 75%);
   border-width: 2px;
 }
-h3{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
+#main-page-profile-pic{
+  object-fit: cover;
+  width: 25rem;
+  height: 25rem;
+  border-radius: 200px;
 }
