--- a/app.css
+++ b/app.css
@@ -7,7 +7,6 @@ main{
   background-image: linear-gradient(to bottom right, hsl(219, 23%, 55%), hsl(201, 13%, 90%));
   background-size: cover;
   width: 100%;
-  height: 40rem;
 }
 
 #name-plate{
@@ -56,4 +55,33 @@ nav{
 #profile-pic-container{
   display: flex;
   justify-content: center;
+}
+
+#bio{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+h3{
+  font-family: 'Adamina', serif;
+  font-size: 2.6rem;
+  color: rgb(70, 70, 70);
+}
+
+p{
+  margin: 90px;
+  margin-top: 10px;
+  font-family: 'Adamina', serif;
+  color: rgb(70, 70, 70);
+  font-size: 1.1rem;
+  text-align: center;
+}
+
+.icon:hover{
+  opacity: 40%;
+}
+
+#footer-text{
+  font-size: 1rem;
 }
